# types-trainer

./: Cargo.toml  README.md
clienttest/: main.py
src/: client.rs  main.rs  server.rs
src/lib/: client.rs  server.rs
src/libclient/: drawing.rs  mod.rs  state.rs  textures.rs  utils.rs
src/libserver/: client.rs  clients.rs  mod.rs  utils.rs
