[package]
name = "typestrainer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
raylib = "3.5.0"
rand = "0.8.4"
tokio-tungstenite = "0.15.0"
tokio = {version="1.10.0", features=["full"]}
futures = "0.3.16"
futures-channel = "0.3.16"
futures-util = "0.3.16"
tungstenite = "0.14.0"
url = "2.2.2"
chrono = "0.4.19"